; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/advpack/extr_install.c_test_LaunchINFSection.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/advpack/extr_install.c_test_LaunchINFSection.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MAX_PATH = common dso_local global i32 0, align 4
@test_LaunchINFSection.file = internal global [28 x i8] c"test.inf,DefaultInstall,4,0\00", align 16
@test_LaunchINFSection.file2 = internal global [14 x i8] c"test.inf,,1,0\00", align 1
@winetest_interactive = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [20 x i8] c"Expected 1, got %d\0A\00", align 1
@.str.1 = private unnamed_addr constant [4 x i8] c"one\00", align 1
@.str.2 = private unnamed_addr constant [13 x i8] c"one\\test.inf\00", align 1
@CURR_DIR = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [2 x i8] c"\\\00", align 1
@.str.4 = private unnamed_addr constant [31 x i8] c"one\\test.inf,DefaultInstall,,4\00", align 1
@.str.5 = private unnamed_addr constant [20 x i8] c"Expected 0, got %d\0A\00", align 1
@.str.6 = private unnamed_addr constant [9 x i8] c"test.inf\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_LaunchINFSection to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_LaunchINFSection() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i8*, align 8
  %3 = alloca i64, align 8
  %4 = load i32, i32* @MAX_PATH, align 4
  %5 = zext i32 %4 to i64
  %6 = call i8* @llvm.stacksave()
  store i8* %6, i8** %2, align 8
  %7 = alloca i8, i64 %5, align 16
  store i64 %5, i64* %3, align 8
  %8 = load i64, i64* @winetest_interactive, align 8
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %17

10:                                               ; preds = %0
  %11 = call i32 @pLaunchINFSection(i32* null, i32* null, i8* null, i32 0)
  store i32 %11, i32* %1, align 4
  %12 = load i32, i32* %1, align 4
  %13 = icmp eq i32 %12, 1
  %14 = zext i1 %13 to i32
  %15 = load i32, i32* %1, align 4
  %16 = call i32 @ok(i32 %14, i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0), i32 %15)
  br label %17

17:                                               ; preds = %10, %0
  %18 = call i32 @CreateDirectoryA(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.1, i64 0, i64 0), i32* null)
  %19 = call i32 @create_inf_file(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.2, i64 0, i64 0))
  %20 = load i32, i32* @CURR_DIR, align 4
  %21 = call i32 @lstrcpyA(i8* %7, i32 %20)
  %22 = call i32 @lstrcatA(i8* %7, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.3, i64 0, i64 0))
  %23 = call i32 @lstrcatA(i8* %7, i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str.4, i64 0, i64 0))
  %24 = call i32 @pLaunchINFSection(i32* null, i32* null, i8* %7, i32 0)
  store i32 %24, i32* %1, align 4
  %25 = load i32, i32* %1, align 4
  %26 = icmp eq i32 %25, 0
  %27 = zext i1 %26 to i32
  %28 = load i32, i32* %1, align 4
  %29 = call i32 @ok(i32 %27, i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.5, i64 0, i64 0), i32 %28)
  %30 = call i32 @DeleteFileA(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.2, i64 0, i64 0))
  %31 = call i32 @RemoveDirectoryA(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.1, i64 0, i64 0))
  %32 = call i32 @create_inf_file(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.6, i64 0, i64 0))
  %33 = call i32 @pLaunchINFSection(i32* null, i32* null, i8* getelementptr inbounds ([28 x i8], [28 x i8]* @test_LaunchINFSection.file, i64 0, i64 0), i32 0)
  store i32 %33, i32* %1, align 4
  %34 = load i32, i32* %1, align 4
  %35 = icmp eq i32 %34, 0
  %36 = zext i1 %35 to i32
  %37 = load i32, i32* %1, align 4
  %38 = call i32 @ok(i32 %36, i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.5, i64 0, i64 0), i32 %37)
  %39 = call i32 @pLaunchINFSection(i32* null, i32* null, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @test_LaunchINFSection.file2, i64 0, i64 0), i32 0)
  store i32 %39, i32* %1, align 4
  %40 = load i32, i32* %1, align 4
  %41 = icmp eq i32 %40, 0
  %42 = zext i1 %41 to i32
  %43 = load i32, i32* %1, align 4
  %44 = call i32 @ok(i32 %42, i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.5, i64 0, i64 0), i32 %43)
  %45 = call i32 @DeleteFileA(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.6, i64 0, i64 0))
  %46 = load i8*, i8** %2, align 8
  call void @llvm.stackrestore(i8* %46)
  ret void
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @pLaunchINFSection(i32*, i32*, i8*, i32) #2

declare dso_local i32 @ok(i32, i8*, i32) #2

declare dso_local i32 @CreateDirectoryA(i8*, i32*) #2

declare dso_local i32 @create_inf_file(i8*) #2

declare dso_local i32 @lstrcpyA(i8*, i32) #2

declare dso_local i32 @lstrcatA(i8*, i8*) #2

declare dso_local i32 @DeleteFileA(i8*) #2

declare dso_local i32 @RemoveDirectoryA(i8*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
